<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_home">Home</string>
    <string name="title_aliases">@string/aliases</string>
    <string name="app_settings">App settings</string>
    <string name="title_recipients">@string/recipients</string>
    <string name="recipients">Recipients</string>
    <string name="addyio_settings">addy.io settings</string>
    <string name="monthly_bandwidth">Monthly bandwidth</string>
    <string name="copied_alias">Copied alias</string>
    <string name="most_active_aliases">Most active aliases</string>
    <string name="created_at_s">Created %s</string>
    <string name="updated_at_s">Updated %s</string>
    <string name="deleted_at_s">Deleted %s</string>
    <string name="copy_alias">Copy alias</string>
    <string name="setup_api_key" translatable="false" tools:ignore="Typos">"DHnhF4dLwikeT0r0OX06LJpabVAp8xfeAIgYuTR1yOTEDTk1etLc1foOW1qlNdSFFpWAEH3NRpdQCU6bemN4zaBZUetcLbeY2f5yw49RVuhDGz1YLkgwnL1wcsMdRi84gMfFNaeiRA8bfBLjTIzyP139STErs9AIC3PzNQtyeBNsM3cQgojUtmRkcSHkBdgeVwkWea3UAKcAgUv9bYpdisnSyt5xZF8sPZMMPJxfPBNbyK5yP46cvozCVPQEKWlehtOzmXyWvadcbMKRTzVXzMrxOZVcYF1fRab1L4OAFhkOHDjtwlktNz3uPgR1wdJWrorVHnb7KNZA35h5F66mZxvbGlfMqQIkDsNk9KQRnSg2SYUPItvHTbBKDciM2t8QPbmD51CTgx6rQuWXubtYv9OAL3c74A09m0YA35tNNBV4U6MUkS2Q1jslbWlXAB8Lgi0fZMh6QmWPZkQ5N9sdRXSdcl3PMqxL6wU8Zsiw4JpiQIHrcBkbhK8SRhsmN53rDyz0a3NPbreum1EbFTzaiX8RGD8hMLXcqMmjD3lW5wF5jAxFmguPRURWutOQYmC0H6cKigYN2zKIxSULCjVQ5Aw10IDz0EiTYGUcTIZqoFYaiUu82G2T3xmMBNKD8Vm6IqxtTLIeLiv5VOJGfeG8bJH4WOt3CfD3Rda22wuOyGVSHfdz4frgS5QcjABMbC9xw8v8w7GtW0j7gDiaDLkY6teCZ47Ilsh820XBWLV6WLFFDBtzHt1zYJVkE97nM945zsn54OavppJCOTfllTEnWEHl7D1UvdRppuOyOM3g6rvLisXpgrmskIZgH6aquTrVu4aLfDptELAzbMBEOswxs13wIGqgnm0IqrTsHSxQPesyZ5PigFbLEHWkMdEd2KcjKcLWQirFb24RrllUHbyWHvt4Z77B5cIG3dDhOcT3Y04fbm3HZNGA7nsSsyX5lcTvsz2AMpSoVPfsIJXbfK3mA9cRIVzmFJzO3duT7NSBZWtH4mZvJ0yxikF2Izo9VyLobA3Onu9Eb4RFr4ETF1f18VqbMqCum3ZaEknovgvTLhmpn9ZSxR5YzsryaTtAJVR6GOdkN2IAisXCkTJ1VJvM1bpU0oOtQ72QMwPiUF2IiQSemqA2BiunBwAN2s35tGA9zOc1aYMNAAz1nCd7T0JqYHbeHsC6YQQjE24n8JAjF0DRfJDOBRkHIv53s2lhfQUY0atpFfRscJ3jui1B5p1vXlzhz7qse0abWsGhjBRZatykRPnFZFaGAmUUZQIDbo1AA2n9EmsDoBF3c961bX28doVNVksH0DAH2bI7w9Ltg9tftUt8cAvtBARSnGVQTXTyeN9ABSELmrJhj8U74vwM30QOmotyJDE5PuZ9eVgyfeUgg0JcdD7glsOxrRBmml3MiMAsRodyogZDdU8Z5OhAdrHR6tWvnY1isi0gUdYPOcakgFWo3SR63LPAFPEXVnoaO8kEoMSOm1ohMOcJeMWDle6AP4Cf8794ZAxSFm9fqh06hOYqC8tZHN5D2oGaFXwAIpzRneGbMXQ5R7Qiz5xkpNwdxovpBBNgrOEX3UnBCETH16zy8SDhdtUkBI9MsjMeY5U6Rc6JVPbkeCDmW4Jy8PLdds3ns0mx2NcU8S0iLbDeZ3yCNYyG3fYaBzyhXtW8hgIG3Dgzr77Lk9xzQreELkYOeg71fUVC24oSzoeRxvbCMoWdXte4H09f696EQrg9p7PHkL1vzPiEDlMkQyndz79XlG08BqQLjPYLuVx5qZqgoLfAJ9zrPl6ZaEC3g7nJoupAUVJkMwkykKEC1bofIDBjcqjqDbxyMl23iLHqIMOUwUaycNrZIWw3TUUSjhdyDgeO6aUmFT56IIeTockBBjLQq9QRVu51K7rNF6d1e8Bu92GyY7f7eqOZWia7FByuQaFgtm4cCgMsK2lnCAOLGnDW9V220Ao68NeeP2TTO6SbEaNNMFe4Rz3trm1FUj5uwhGkwVjvo7AhDfg5tLPFDIWnxXNMC0cqJgvTxpTpu6vUj6YIwO5CKDGtM3wdoGqO "</string>
    <string name="APIKey">API key</string>
    <string name="get_my_key">Get my key</string>
    <string name="sign_in">Sign in</string>
    <string name="APIKey_desc">Paste your API key here…</string>
    <string name="hi_there">Hi there!</string>
    <string name="drag_down_to_close">Drag down to close</string>
    <string name="welcome_to">Welcome to</string>
    <string name="anonymous_email_forwarding">Anonymous Email Forwarding</string>
    <string name="new_user">New user?</string>
    <string name="how_does_it_work">How does it work?</string>
    <string name="setup_how_1_desc">Let\'s say your username is johndoe. You can now use *@johndoe.addy.io (or .me) as your email. Where * denotes any valid local part for an email address.\n\nIf you would like to remain anonymous choose a username that is not linked to your real name or identify and that you haven\'t used anywhere else.\n\nYou can also create aliases at shared domains if you are concerned about others linking alias ownership to you.</string>
    <string name="setup_how_1">1. Register Your Username</string>
    <string name="setup_how_2">2. Create Aliases</string>
    <string name="setup_how_2_desc">Either on the fly or generated beforehand. Next time you are signing up to a website or newsletter, simply make up a new alias and enter that instead of your real email address.\n\nFor example, if you are on vuejs.org and you want to sign up to their newsletter you could simply enter vuejs@johndoe.addy.io (or .me). \n\nWe\'ll automatically create the alias in your dashboard as soon as it receives its first email. You can reply to emails and send from aliases anonymously too!</string>
    <string name="setup_how_3">3. Manage Aliases</string>
    <string name="setup_how_3_desc">Let\'s say a spammer gets hold of one of your aliases and starts sending unsolicited email to it. You can simply toggle a switch in your dashboard and deactivate that alias.\n\nOur system will then silently discard any further emails and you won\'t be forwarded anything else for that alias.\n\nYou can also delete the alias. Then our system will reject any emails and respond with an error.</string>
    <string name="setup_how_4">4. What do you think?</string>
    <string name="setup_how_4_desc">Sounds like a service you’d use? If so, why not sign up.</string>
    <string name="api_invalid">API key invalid</string>
    <string name="aliases_statistics">Aliases statistics</string>
    <string name="emails_forwarded">Emails forwarded</string>
    <string name="emails_replied_sent">Emails replied/sent</string>
    <string name="all_aliases">All aliases</string>
    <string name="aliases_filtered">Aliases (filter active)</string>
    <string name="settings">Settings</string>
    <string name="resend_email">Resend email</string>
    <string name="delete">Delete</string>
    <string name="recipients_list_description" tools:ignore="PluralsCandidate">%1$d aliases</string>
    <string name="encryption_enabled">Encryption enabled</string>
    <string name="open_options">Open options</string>
    <string name="api_obtain_desc">Your API can be obtained at the settings page at app.addy.io (or your own hosted instance)</string>
    <string name="add_recipient">Add recipient</string>
    <string name="next">Next</string>
    <string name="get_started">Get started</string>
    <string name="add_alias_desc">Other aliases e.g. alias@%s.addy.io or .me can also be created automatically when they receive their first email</string>
    <string name="description">Description</string>
    <string name="alias_no_labels">None</string>
    <string name="not_a_valid_domain">This is a not a valid domain</string>
    <string name="not_a_valid_alias_format">Not a valid alias format</string>
    <string name="domain">Domain</string>
    <string name="alias_format">Alias format</string>
    <string name="faq">FAQ</string>
    <string name="general">General</string>
    <string name="faq_desc">Visit the Frequently asked questions</string>
    <string name="see_this_version_changelogs">See this version\'s changelog</string>
    <string name="changelog">Changelog</string>
    <string name="contributors">Contributors</string>
    <string name="visit_addyio_helps_section">Visit addy.io help section</string>
    <string name="addyio_help">addy.io help</string>
    <string name="uiux_interface">Interface</string>
    <string name="dark_mode">Dark mode</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="system_default">System default</string>
    <string name="alias_status_active">Alias active</string>
    <string name="created_at">Created at</string>
    <string name="updated_at">Updated at</string>
    <string name="delete_alias">Delete alias</string>
    <string name="delete_alias_desc">Once deleted, this alias will reject any emails sent to it</string>
    <string name="restore_alias">Restore alias</string>
    <string name="restore_alias_desc">Once restored, this alias will be able to receive emails again</string>
    <string name="forget_alias_desc">Forgetting an alias will disassociate it from your account</string>
    <string name="forget_alias">Forget alias</string>
    <string name="domains">Domains</string>
    <string name="usernames">Usernames</string>
    <string name="rules">Rules</string>
    <string name="watch_alias">Watch alias</string>
    <string name="watch_alias_desc">Receive a notification when an email is sent to this alias</string>
    <string name="Info">Info</string>
    <string name="obtaining_information">obtaining information…</string>
    <string name="update_notify_title">Notify for new updates</string>
    <string name="update_notify_desc">Periodically check for updates in the background and send a notification when one is available</string>
    <string name="previous_changelogs">Previous changelogs</string>
    <string name="previous_changelogs_desc">View previous changelogs</string>
    <string name="version_channel_info">Version: %1$s\nDownload channel: %2$s</string>
    <string name="backup_now">Backup now</string>
    <string name="last_backup_desc">Last backup was done %s</string>
    <string name="backup_password">Backup password</string>
    <string name="backup_password_desc">Set the encryption key for backup encryption. The default password when not set is \"anonaddy\"</string>
    <string name="backup_location">Backup location</string>
    <string name="backup_location_desc">Set the location for backups to be stored</string>
    <string name="backup_periodic">Make backups automatically</string>
    <string name="backup_periodic_desc">Periodically make backups in the background every other day. Backups are stored for 30 days and will be automatically deleted after this period</string>
    <string name="backup_log">Backup log</string>
    <string name="backup_log_desc">View previous backup tasks</string>
    <string name="feature_not_available_subscription">This feature is not available with your current subscription</string>
    <string name="manage_subscription">Manage subscription</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="activating_subscription">Activating subscription</string>
    <string name="activating_subscription_desc">We are communicating your\nsubscription to the addy.io server</string>
    <string name="this_might_take_a_few_moments">This might take a few moments.</string>
    <string name="subscription_account_disabled">Cannot manage subscription</string>
    <string name="subscription_account_disabled_desc">Your addy.io account is currently disabled, so you cannot subscribe to another addy.io plan. If you have an active subscription through Google Play, please cancel it by selecting “Manage Subscription” below. For further assistance, contact our support team through the button below.</string>
    <string name="contact_us">Contact us</string>
</resources>