<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/feature_not_available_subscription"
        android:src="@drawable/ic_hourglass"
        app:tint="?colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="?colorAccent"
        android:text="@string/activating_subscription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/activating_subscription_desc" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/bs_adddomain_domain_progressbar2"
        style="@style/Widget.Material3Expressive.CircularProgressIndicator.Wavy.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/this_might_take_a_few_moments" />

</LinearLayout>