<?xml version="1.0" encoding="utf-8"?><!-- 1000dp height is used to make the sheet taller so that it can extend to the top -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bs_darkmode_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:contentDescription="@string/drag_down_to_close"
            android:src="@drawable/drag_pill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/dark_mode"
            android:textAlignment="center"
            android:textColor="@color/BlackWhite"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        style="@style/divider"
        android:layout_width="match_parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RadioGroup
            android:id="@+id/bs_darkmode_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/bs_darkmode_off"
                style="@style/RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/off" />

            <View
                style="@style/divider"
                android:layout_width="match_parent" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/bs_darkmode_on"
                style="@style/RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/on" />

            <View
                style="@style/divider"
                android:layout_width="match_parent" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/bs_darkmode_automatic"
                style="@style/RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_default" />
        </RadioGroup>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>